--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -29,6 +29,7 @@ dirs-next = "2.0"
 base64 = "0.22.1"
 urlencoding = "2"
 chrono = { version = "0.4", features = ["serde"] }
+rand = "0.8"
 
 rss = "2.0.12"
 reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json", "multipart", "cookies"] }
