--- a/.github/workflows/nightlybuild.yml
+++ b/.github/workflows/nightlybuild.yml
@@ -1,53 +1,62 @@
 name: Nightly Build
 
 on:
+  schedule:
+    - cron: '0 0 * * *' # Runs every day at midnight UTC
   workflow_dispatch:
-
-permissions:
-  contents: write
 
 jobs:
   nightly-build:
-    runs-on: ubuntu-latest
-    if: github.ref == 'refs/heads/main' || github.ref == 'refs/heads/develop'
-    env:
-      TZ: "UTC"
-    steps:
-      - name: Checkout repository
-        uses: actions/checkout@v4
+    runs-on: ${{ matrix.os }}
+    strategy:
+      matrix:
+        os: [windows-latest, macos-latest]
 
-      # Insert your build steps here. For example:
+    if: github.ref == 'refs/heads/main' || github.ref == 'refs/heads/develop'
+
+    steps:
+      - uses: actions/checkout@v4
+
       - name: Set up Node.js
         uses: actions/setup-node@v4
         with:
           node-version: 20
 
+      - name: Install Rust
+        uses: dtolnay/rust-toolchain@stable
+
+      - name: Install Tauri CLI
+        run: npm install -g @tauri-apps/cli
+
       - name: Install dependencies
-        run: npm ci
+        run: npm install
 
-      - name: Build
-        run: npm run build
+      - name: Build app
+        run: npm run tauri build
 
-      # Save build artifact - adjust path as needed for your project
-      - name: Archive build output
+      - name: Upload build artifacts as nightly
+        uses: actions/upload-artifact@v4
+        with:
+          name: nightly-tauri-build-${{ matrix.os }}-${{ github.ref_name }}
+          path: src-tauri/target/release/bundle/**
+
+      - name: Get build time
+        id: build_time
+        run: echo "BUILD_TIME=$(date -u +"%Y-%m-%d %H:%M:%S UTC")" >> $GITHUB_OUTPUT
+
+      - name: Download build artifacts
+        uses: actions/download-artifact@v4
+        with:
+          name: nightly-tauri-build-${{ matrix.os }}-${{ github.ref_name }}
+          path: nightly-artifacts
+
+      - name: Zip nightly build
         run: |
-          mkdir -p nightly_artifacts
-          cp -r ./build ./nightly_artifacts/
-      - name: Create branch name artifact
-        run: |
-          echo "${GITHUB_REF#refs/heads/}" > nightly_artifacts/branch.txt
+          cd nightly-artifacts
+          zip -r ../nightly-tauri-build-${{ matrix.os }}-${{ github.ref_name }}.zip .
+        shell: bash
 
-      - name: Set build time
-        id: set_time
-        run: echo "time=$(date -u +"%Y-%m-%d %H:%M:%S UTC")" >> $GITHUB_OUTPUT
-
-      - name: Package nightly build
-        run: |
-          tar -czf nightly-build-${GITHUB_REF##*/}.tar.gz -C nightly_artifacts .
-      
-      # Create or update the prerelease with tag "nightly release"
       - name: Create or update nightly prerelease
-        id: create_release
         uses: softprops/action-gh-release@v2
         with:
           tag_name: nightly-release
@@ -55,16 +64,15 @@ jobs:
           body: |
             This release is a nightly release, It will be unstable compared to the official releases, use with caution!
 
-            Last build successfully completed at ${{ steps.set_time.outputs.time }} UTC
+            Last build successfully completed at ${{ steps.build_time.outputs.BUILD_TIME }} UTC
           prerelease: true
-          draft: false
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
-      - name: Upload nightly build artifact
+      - name: Upload nightly build to prerelease
         uses: softprops/action-gh-release@v2
         with:
           tag_name: nightly-release
-          files: nightly-build-${GITHUB_REF##*/}.tar.gz
+          files: nightly-tauri-build-${{ matrix.os }}-${{ github.ref_name }}.zip
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
