--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -42,6 +42,7 @@ anyhow = "1.0.98"
 xmltree = "0.11.0"
 rayon = "1.8"
 tokio-util = "0.7.15"
+once_cell = "1"
 
 [target.'cfg(target_os = "macos")'.dependencies]
 cocoa = "0.25"
