--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   },
   "license": "MIT",
   "dependencies": {
+    "7.css": "^0.18.0",
     "@tailwindcss/typography": "^0.5.16",
     "@tauri-apps/api": "^2.5.0",
     "@tauri-apps/plugin-dialog": "^2.3.0",
@@ -31,7 +32,6 @@
     "@tiptap/extension-typography": "^2.12.0",
     "@tiptap/starter-kit": "^2.12.0",
     "@tiptap/suggestion": "^2.12.0",
-    "7.css": "^0.18.0",
     "chart.js": "^4.4.9",
     "dayjs": "^1.11.13",
     "dompurify": "^3.2.5",
@@ -52,9 +52,9 @@
     "@sveltejs/adapter-static": "^3.0.8",
     "@sveltejs/kit": "^2.20.8",
     "@sveltejs/vite-plugin-svelte": "^5.0.3",
+    "@tailwindcss/postcss": "^4.1.13",
     "@tauri-apps/cli": "^2.5.0",
     "@types/file-saver": "^2.0.7",
-    "autoprefixer": "^10.4.21",
     "motion-start": "^0.1.15",
     "postcss": "^8.5.3",
     "prettier": "^3.4.2",
@@ -62,7 +62,7 @@
     "svelte": "^5.28.2",
     "svelte-check": "^4.1.7",
     "svelte-hero-icons": "^5.2.0",
-    "tailwindcss": "^3.4.17",
+    "tailwindcss": "^4.1.13",
     "typescript": "~5.6.3",
     "vite": "^6.3.5"
   }
