--- a/package.json
+++ b/package.json
@@ -49,12 +49,15 @@
     "svelte-motion": "^0.12.2"
   },
   "devDependencies": {
+    "@lucide/svelte": "^0.544.0",
     "@sveltejs/adapter-static": "^3.0.8",
     "@sveltejs/kit": "^2.20.8",
     "@sveltejs/vite-plugin-svelte": "^5.0.3",
     "@tailwindcss/postcss": "^4.1.13",
     "@tauri-apps/cli": "^2.5.0",
     "@types/file-saver": "^2.0.7",
+    "clsx": "^2.1.1",
+    "layerchart": "2.0.0-next.27",
     "motion-start": "^0.1.15",
     "postcss": "^8.5.3",
     "prettier": "^3.4.2",
@@ -62,7 +65,10 @@
     "svelte": "^5.28.2",
     "svelte-check": "^4.1.7",
     "svelte-hero-icons": "^5.2.0",
+    "tailwind-merge": "^3.3.1",
+    "tailwind-variants": "^3.1.1",
     "tailwindcss": "^4.1.13",
+    "tw-animate-css": "^1.3.8",
     "typescript": "~5.6.3",
     "vite": "^6.3.5"
   }
