--- a/package.json
+++ b/package.json
@@ -5,7 +5,9 @@
   "type": "module",
   "scripts": {
     "start": "npm install && npm run tauri dev",
+    "predev": "node scripts/generate-themes.mjs",
     "dev": "vite dev",
+    "prebuild": "node scripts/generate-themes.mjs",
     "build": "vite build",
     "preview": "vite preview",
     "check": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json",
@@ -15,11 +17,12 @@
   },
   "license": "MIT",
   "dependencies": {
+    "7.css": "^0.18.0",
     "@tailwindcss/typography": "^0.5.16",
-    "@tauri-apps/api": "^2.8.0",
-    "@tauri-apps/plugin-notification": "^2.3.1",
-    "@tauri-apps/plugin-dialog": "^2.4.0",
-    "@tauri-apps/plugin-opener": "^2.5.0",
+    "@tauri-apps/api": "^2.5.0",
+    "@tauri-apps/plugin-dialog": "^2.3.0",
+    "@tauri-apps/plugin-notification": "^2.2.2",
+    "@tauri-apps/plugin-opener": "^2.2.6",
     "@tiptap/core": "^2.12.0",
     "@tiptap/extension-bubble-menu": "^2.12.0",
     "@tiptap/extension-dropcursor": "^2.12.0",
@@ -31,8 +34,11 @@
     "@tiptap/extension-typography": "^2.12.0",
     "@tiptap/starter-kit": "^2.12.0",
     "@tiptap/suggestion": "^2.12.0",
-    "7.css": "^0.18.0",
+    "@types/d3-scale": "^4.0.9",
+    "@types/d3-shape": "^3.1.7",
     "chart.js": "^4.4.9",
+    "d3-scale": "^4.0.2",
+    "d3-shape": "^3.2.0",
     "dayjs": "^1.11.13",
     "dompurify": "^3.2.5",
     "file-saver": "^2.0.5",
@@ -49,20 +55,29 @@
     "svelte-motion": "^0.12.2"
   },
   "devDependencies": {
+    "@internationalized/date": "^3.9.0",
+    "@lucide/svelte": "^0.515.0",
     "@sveltejs/adapter-static": "^3.0.8",
     "@sveltejs/kit": "^2.20.8",
     "@sveltejs/vite-plugin-svelte": "^5.0.3",
+    "@tailwindcss/postcss": "^4.1.13",
+    "@tanstack/table-core": "^8.21.3",
     "@tauri-apps/cli": "^2.5.0",
     "@types/file-saver": "^2.0.7",
-    "autoprefixer": "^10.4.21",
+    "bits-ui": "^2.9.8",
+    "clsx": "^2.1.1",
+    "layerchart": "2.0.0-next.27",
     "motion-start": "^0.1.15",
     "postcss": "^8.5.3",
     "prettier": "^3.4.2",
     "prettier-plugin-svelte": "^3.3.2",
-    "svelte": "^5.28.2",
+    "svelte": "^5.38.10",
     "svelte-check": "^4.1.7",
     "svelte-hero-icons": "^5.2.0",
-    "tailwindcss": "^3.4.17",
+    "tailwind-merge": "^3.3.1",
+    "tailwind-variants": "^1.0.0",
+    "tailwindcss": "^4.1.13",
+    "tw-animate-css": "^1.3.8",
     "typescript": "~5.6.3",
     "vite": "^6.3.5"
   }
