--- a/package.json
+++ b/package.json
@@ -22,7 +22,7 @@
     "@tauri-apps/api": "^2.8.0",
     "@tauri-apps/plugin-dialog": "^2.4.0",
     "@tauri-apps/plugin-notification": "^2.3.1",
-    "@tauri-apps/plugin-opener": "~2.2.3",
+    "@tauri-apps/plugin-opener": "2.5.0",
     "@tiptap/core": "^2.12.0",
     "@tiptap/extension-bubble-menu": "^2.12.0",
     "@tiptap/extension-dropcursor": "^2.12.0",
