--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -28,7 +28,7 @@ jobs:
         run: npm install -g @tauri-apps/cli
 
       - name: Install dependencies
-        run: npm ci
+        run: npm i
 
       - name: Build desktop app
         run: npm run tauri build
