--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -96,7 +96,7 @@ jobs:
         run: npm install -g @tauri-apps/cli
 
       - name: Install dependencies
-        run: npm ci
+        run: npm i
 
       - name: Accept Android licenses
         run: |
