--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -29,10 +29,14 @@ jobs:
 
       - name: Install dependencies
         run: npm i
-
-      - name: Build desktop app
+        
+      - name: Build desktop app (MacOS)
+        if: {{ matrix.os }} == 'macos-latest'
+        run: npm run tauri build --target universal-apple-darwin
+        
+      - name: Build desktop app (Windows)
+        if: {{ matrix.os }} == 'windows-latest'
         run: npm run tauri build
-
       - name: Upload desktop build artifacts
         uses: actions/upload-artifact@v4
         with:
