--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -31,11 +31,11 @@ jobs:
         run: npm i
 
       - name: Build desktop app (MacOS)
-        if: ${{ matrix.os }} == 'macos-latest'
+        if: matrix.os == 'macos-latest'
         run: npm run tauri build -- --target universal-apple-darwin
         
       - name: Build desktop app (Windows)
-        if: ${{ matrix.os }} == 'windows-latest'
+        if: matrix.os == 'windows-latest'
         run: npm run tauri build
       - name: Upload desktop build artifacts
         uses: actions/upload-artifact@v4
