--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -32,7 +32,7 @@ jobs:
 
       - name: Build desktop app (MacOS)
         if: matrix.os == 'macos-latest'
-        run: npm run tauri build -- --target universal-apple-darwin
+        run: rustup target add x86_64-apple-darwin && npm run tauri build -- --target universal-apple-darwin
         
       - name: Build desktop app (Windows)
         if: matrix.os == 'windows-latest'
