--- a/package.json
+++ b/package.json
@@ -17,7 +17,6 @@
   },
   "license": "MIT",
   "dependencies": {
-    "7.css": "^0.18.0",
     "@tailwindcss/typography": "^0.5.16",
     "@tauri-apps/api": "^2.8.0",
     "@tauri-apps/plugin-dialog": "^2.4.0",
@@ -36,6 +35,7 @@
     "@tiptap/suggestion": "^2.12.0",
     "@types/d3-scale": "^4.0.9",
     "@types/d3-shape": "^3.1.7",
+    "7.css": "^0.18.0",
     "chart.js": "^4.4.9",
     "d3-scale": "^4.0.2",
     "d3-shape": "^3.2.0",
@@ -52,7 +52,8 @@
     "motion": "^12.19.1",
     "pdfjs-dist": "^5.3.31",
     "rss-parser": "^3.12.0",
-    "svelte-motion": "^0.12.2"
+    "svelte-motion": "^0.12.2",
+    "wx-svelte-gantt": "^2.2.1"
   },
   "devDependencies": {
     "@internationalized/date": "^3.9.0",
@@ -76,7 +77,6 @@
     "svelte-hero-icons": "^5.2.0",
     "tailwind-merge": "^3.3.1",
     "tailwind-variants": "^1.0.0",
-    
     "tailwindcss": "^4.1.13",
     "tw-animate-css": "^1.3.8",
     "typescript": "~5.6.3",
