feat: test localisation with i8n

--- a/package.json
+++ b/package.json
@@ -52,6 +52,7 @@
     "motion": "^12.19.1",
     "pdfjs-dist": "^5.3.31",
     "rss-parser": "^3.12.0",
+    "svelte-i18n": "^4.0.1",
     "svelte-motion": "^0.12.2",
     "wx-svelte-gantt": "^2.2.1"
   },
