--- a/package.json
+++ b/package.json
@@ -31,6 +31,15 @@
     "@tiptap/extension-task-item": "^2.12.0",
     "@tiptap/extension-task-list": "^2.12.0",
     "@tiptap/extension-typography": "^2.12.0",
+    "@tiptap/extension-table": "^2.12.0",
+    "@tiptap/extension-table-row": "^2.12.0",
+    "@tiptap/extension-table-header": "^2.12.0",
+    "@tiptap/extension-table-cell": "^2.12.0",
+    "@tiptap/extension-focus": "^2.12.0",
+    "@tiptap/extension-character-count": "^2.12.0",
+    "@tiptap/extension-underline": "^2.12.0",
+    "prosemirror-state": "^1.4.3",
+    "prosemirror-view": "^1.33.9",
     "@tiptap/starter-kit": "^2.12.0",
     "@tiptap/suggestion": "^2.12.0",
     "@types/d3-scale": "^4.0.9",
