--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -43,6 +43,8 @@ xmltree = "0.11.0"
 rayon = "1.8"
 tokio-util = "0.7.15"
 once_cell = "1"
+uuid = { version = "1.0", features = ["v4", "serde"] }
+walkdir = "2.0"
 
 [target.'cfg(target_os = "macos")'.dependencies]
 cocoa = "0.25"
