--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -46,6 +46,11 @@ once_cell = "1"
 uuid = { version = "1.0", features = ["v4", "serde"] }
 walkdir = "2.0"
 
+# Security & Encryption
+ring = "0.17"
+keyring = { version = "2.3"}
+zeroize = "1.7"
+
 [target.'cfg(target_os = "macos")'.dependencies]
 cocoa = "0.25"
 objc = "0.2"
