--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -48,8 +48,9 @@ walkdir = "2.0"
 
 # Security & Encryption
 ring = "0.17"
-keyring = { version = "2.3"}
+keyring = "2.3"
 zeroize = "1.7"
+regex = "1.10"
 
 [target.'cfg(target_os = "macos")'.dependencies]
 cocoa = "0.25"
