--- a/package.json
+++ b/package.json
@@ -88,6 +88,7 @@
     "tailwind-merge": "^3.3.1",
     "tailwind-variants": "^1.0.0",
     "tailwindcss": "^4.1.13",
+    "terser": "^5.36.0",
     "tw-animate-css": "^1.3.8",
     "typescript": "~5.6.3",
     "vite": "^6.3.5"
