--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -34,6 +34,7 @@ rand = "0.8"
 rss = "2.0.12"
 reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json", "multipart", "cookies"] }
 tokio = { version = "1", features = ["full"] }
+futures = "0.3"
 time = "0.3"
 url = "2.5"
 tauri-plugin-notification = "2"
