feat: popup lesson details and current time and better displayin

--- a/package.json
+++ b/package.json
@@ -20,6 +20,9 @@
     "7.css": "^0.18.0",
     "@preact/signals": "^2.5.1",
     "@schedule-x/calendar": "^3.4.2",
+    "@schedule-x/calendar-controls": "^3.4.2",
+    "@schedule-x/current-time": "^3.4.2",
+    "@schedule-x/event-modal": "^3.4.2",
     "@schedule-x/svelte": "^3.0.0",
     "@schedule-x/theme-default": "^3.4.2",
     "@tailwindcss/typography": "^0.5.16",
