--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "@tauri-apps/plugin-dialog": "^2.4.0",
     "@tauri-apps/plugin-notification": "^2.3.1",
     "@tauri-apps/plugin-opener": "2.5.0",
+    "@tauri-apps/plugin-updater": "~2.9.0",
     "@tiptap/core": "^2.12.0",
     "@tiptap/extension-bubble-menu": "^2.12.0",
     "@tiptap/extension-character-count": "^2.12.0",
