--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -58,6 +58,9 @@ regex = "1.10"
 cocoa = "0.25"
 objc = "0.2"
 
+[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
+tauri-plugin-updater = "2"
+
 # Production build optimizations
 [profile.release]
 # Enable Link Time Optimization for maximum performance
