--- a/.github/workflows/weekly-build.yml
+++ b/.github/workflows/weekly-build.yml
@@ -21,7 +21,7 @@ jobs:
         uses: actions/setup-node@v4
         with:
           node-version: 20
-          
+
       - name: Install Rust
         uses: dtolnay/rust-toolchain@stable
 
@@ -30,12 +30,15 @@ jobs:
 
       - name: Install dependencies
         run: npm install
-        
+
       - name: Install zip (Windows)
         if: runner.os == 'Windows'
         run: choco install zip -y
-        
+
       - name: Build app
+        env:
+          TAURI_SIGNING_PRIVATE_KEY: ${{ secrets.TAURI_SIGNING_PRIVATE_KEY }}
+          TAURI_SIGNING_PRIVATE_KEY_PASSWORD: ${{ secrets.TAURI_SIGNING_PRIVATE_KEY_PASSWORD }}
         run: npm run tauri build
 
       - name: Upload build artifacts (workflow run)
