--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -131,52 +131,8 @@ jobs:
             src-tauri/target/aarch64-apple-darwin/release/bundle/**
             src-tauri/target/aarch64-apple-darwin/release/*.sig
 
-  build-linux:
-    runs-on: ubuntu-latest
-    steps:
-      - name: Checkout repository
-        uses: actions/checkout@v4
-
-      - name: Setup pnpm
-        uses: pnpm/action-setup@v4
-        with:
-          version: 8
-
-      - name: Setup Node.js
-        uses: actions/setup-node@v4
-        with:
-          node-version: '20'
-          cache: 'pnpm'
-
-      - name: Install Rust
-        uses: dtolnay/rust-toolchain@stable
-        with:
-          targets: x86_64-unknown-linux-gnu
-
-      - name: Install system dependencies
-        run: |
-          sudo apt-get update
-          sudo apt-get install -y libwebkit2gtk-4.1-dev libssl-dev libayatana-appindicator3-dev librsvg2-dev
-
-      - name: Install dependencies
-        run: pnpm install
-
-      - name: Build Linux
-        env:
-          TAURI_SIGNING_PRIVATE_KEY: ${{ secrets.TAURI_SIGNING_PRIVATE_KEY }}
-          TAURI_SIGNING_PRIVATE_KEY_PASSWORD: ${{ secrets.TAURI_SIGNING_PRIVATE_KEY_PASSWORD }}
-        run: pnpm tauri build --target x86_64-unknown-linux-gnu
-
-      - name: Upload Linux artifacts
-        uses: actions/upload-artifact@v4
-        with:
-          name: linux-x86_64
-          path: |
-            src-tauri/target/x86_64-unknown-linux-gnu/release/bundle/**
-            src-tauri/target/x86_64-unknown-linux-gnu/release/*.sig
-
   create-release:
-    needs: [build-windows, build-macos-intel, build-macos-arm, build-linux]
+    needs: [build-windows, build-macos-intel, build-macos-arm]
     runs-on: ubuntu-latest
     steps:
       - name: Checkout repository
@@ -193,7 +149,6 @@ jobs:
           echo "windows_file=$(find artifacts/windows-x86_64 -name '*.exe' -o -name '*.sig' | head -1 | xargs basename)" >> $GITHUB_OUTPUT
           echo "macos_intel_file=$(find artifacts/darwin-x86_64 -name '*.tar.gz' -o -name '*.sig' | head -1 | xargs basename)" >> $GITHUB_OUTPUT
           echo "macos_arm_file=$(find artifacts/darwin-aarch64 -name '*.tar.gz' -o -name '*.sig' | head -1 | xargs basename)" >> $GITHUB_OUTPUT
-          echo "linux_file=$(find artifacts/linux-x86_64 -name '*.tar.gz' -o -name '*.AppImage.tar.gz' -o -name '*.sig' | head -1 | xargs basename)" >> $GITHUB_OUTPUT
 
       - name: Get release asset URLs
         id: get-urls
@@ -208,7 +163,6 @@ jobs:
           windows_sig=$(find artifacts/windows-x86_64 -name '*.sig' -exec cat {} \; | head -1)
           macos_intel_sig=$(find artifacts/darwin-x86_64 -name '*.sig' -exec cat {} \; | head -1)
           macos_arm_sig=$(find artifacts/darwin-aarch64 -name '*.sig' -exec cat {} \; | head -1)
-          linux_sig=$(find artifacts/linux-x86_64 -name '*.sig' -exec cat {} \; | head -1)
           echo "windows_sig<<EOF" >> $GITHUB_OUTPUT
           echo "$windows_sig" >> $GITHUB_OUTPUT
           echo "EOF" >> $GITHUB_OUTPUT
@@ -217,9 +171,6 @@ jobs:
           echo "EOF" >> $GITHUB_OUTPUT
           echo "macos_arm_sig<<EOF" >> $GITHUB_OUTPUT
           echo "$macos_arm_sig" >> $GITHUB_OUTPUT
-          echo "EOF" >> $GITHUB_OUTPUT
-          echo "linux_sig<<EOF" >> $GITHUB_OUTPUT
-          echo "$linux_sig" >> $GITHUB_OUTPUT
           echo "EOF" >> $GITHUB_OUTPUT
 
       - name: Generate update manifest
@@ -241,10 +192,6 @@ jobs:
               "darwin-aarch64": {
                 "signature": "${{ steps.read-sigs.outputs.macos_arm_sig }}",
                 "url": "${{ steps.get-urls.outputs.base_url }}/${{ steps.find-files.outputs.macos_arm_file }}"
-              },
-              "linux-x86_64": {
-                "signature": "${{ steps.read-sigs.outputs.linux_sig }}",
-                "url": "${{ steps.get-urls.outputs.base_url }}/${{ steps.find-files.outputs.linux_file }}"
               }
             }
           }
@@ -263,7 +210,6 @@ jobs:
             - **Windows (x64)**: `DesQTA_Setup.exe`
             - **macOS (Intel)**: `DesQTA.app.tar.gz`
             - **macOS (Apple Silicon)**: `DesQTA.app.tar.gz`
-            - **Linux (x64)**: `DesQTA.AppImage.tar.gz`
           draft: true
           files: |
             artifacts/**/*
