--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -13,6 +13,9 @@ on:
         type: string
         default: 'Bug fixes and improvements'
 
+permissions:
+  contents: write
+
 jobs:
   build-windows:
     runs-on: windows-latest
