--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "desqta",
-  "version": "1.0.0-rc2",
+  "version": "1.0.0-rc.3",
   "description": "",
   "type": "module",
   "scripts": {
