--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -153,14 +153,6 @@ jobs:
           windows_file=$(basename "$windows_exe")
           echo "windows_file=$windows_file" >> $GITHUB_OUTPUT
 
-          macos_intel_tar=$(find artifacts/darwin-x86_64 -name '*.tar.gz' -not -name '*.sig' | head -1)
-          macos_intel_file=$(basename "$macos_intel_tar")
-          echo "macos_intel_file=$macos_intel_file" >> $GITHUB_OUTPUT
-
-          macos_arm_tar=$(find artifacts/darwin-aarch64 -name '*.tar.gz' -not -name '*.sig' | head -1)
-          macos_arm_file=$(basename "$macos_arm_tar")
-          echo "macos_arm_file=$macos_arm_file" >> $GITHUB_OUTPUT
-
       - name: Get release asset URLs
         id: get-urls
         run: |
@@ -177,28 +169,8 @@ jobs:
             windows_sig_file=$(find artifacts/windows-x86_64 -name '*.sig' | grep -E '(exe|setup)' | head -1)
           fi
           windows_sig=$(cat "$windows_sig_file" | tr -d '\n')
-
-          # Find macOS Intel signature (for .tar.gz file)
-          macos_intel_sig_file=$(find artifacts/darwin-x86_64 -name '*.tar.gz.sig' | head -1)
-          if [ -z "$macos_intel_sig_file" ]; then
-            macos_intel_sig_file=$(find artifacts/darwin-x86_64 -name '*.sig' | grep -i 'tar\|app' | head -1)
-          fi
-          macos_intel_sig=$(cat "$macos_intel_sig_file" | tr -d '\n')
-
-          # Find macOS ARM signature (for .tar.gz file)
-          macos_arm_sig_file=$(find artifacts/darwin-aarch64 -name '*.tar.gz.sig' | head -1)
-          if [ -z "$macos_arm_sig_file" ]; then
-            macos_arm_sig_file=$(find artifacts/darwin-aarch64 -name '*.sig' | grep -i 'tar\|app' | head -1)
-          fi
-          macos_arm_sig=$(cat "$macos_arm_sig_file" | tr -d '\n')
           echo "windows_sig<<EOF" >> $GITHUB_OUTPUT
           echo "$windows_sig" >> $GITHUB_OUTPUT
-          echo "EOF" >> $GITHUB_OUTPUT
-          echo "macos_intel_sig<<EOF" >> $GITHUB_OUTPUT
-          echo "$macos_intel_sig" >> $GITHUB_OUTPUT
-          echo "EOF" >> $GITHUB_OUTPUT
-          echo "macos_arm_sig<<EOF" >> $GITHUB_OUTPUT
-          echo "$macos_arm_sig" >> $GITHUB_OUTPUT
           echo "EOF" >> $GITHUB_OUTPUT
 
       - name: Generate update manifest
@@ -212,14 +184,6 @@ jobs:
               "windows-x86_64": {
                 "signature": "${{ steps.read-sigs.outputs.windows_sig }}",
                 "url": "${{ steps.get-urls.outputs.base_url }}/${{ steps.find-files.outputs.windows_file }}"
-              },
-              "darwin-x86_64": {
-                "signature": "${{ steps.read-sigs.outputs.macos_intel_sig }}",
-                "url": "${{ steps.get-urls.outputs.base_url }}/${{ steps.find-files.outputs.macos_intel_file }}"
-              },
-              "darwin-aarch64": {
-                "signature": "${{ steps.read-sigs.outputs.macos_arm_sig }}",
-                "url": "${{ steps.get-urls.outputs.base_url }}/${{ steps.find-files.outputs.macos_arm_file }}"
               }
             }
           }
@@ -236,8 +200,8 @@ jobs:
 
             ## Downloads
             - **Windows (x64)**: `DesQTA_Setup.exe`
-            - **macOS (Intel)**: `DesQTA.app.tar.gz`
-            - **macOS (Apple Silicon)**: `DesQTA.app.tar.gz`
+            - **macOS (Intel)**: `DesQTA_1.0.0-3_x64.dmg`
+            - **macOS (Apple Silicon)**: `DesQTA_1.0.0-3_aarch64.dmg`
           draft: true
           files: |
             artifacts/windows-x86_64/**/*.exe
@@ -245,11 +209,7 @@ jobs:
             artifacts/windows-x86_64/**/*.exe.sig
             artifacts/windows-x86_64/**/*.msi.sig
             artifacts/darwin-x86_64/**/*.dmg
-            artifacts/darwin-x86_64/**/*.tar.gz
-            artifacts/darwin-x86_64/**/*.sig
             artifacts/darwin-aarch64/**/*.dmg
-            artifacts/darwin-aarch64/**/*.tar.gz
-            artifacts/darwin-aarch64/**/*.sig
             update-manifest.json
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
