--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -47,6 +47,8 @@ once_cell = "1"
 uuid = { version = "1.0", features = ["v4", "serde"] }
 walkdir = "2.0"
 rusqlite = { version = "0.31", features = ["bundled", "chrono", "serde_json"] }
+sysinfo = "0.31"
+lazy_static = "1.5"
 
 # Security & Encryption
 ring = "0.17"
