--- a/package.json
+++ b/package.json
@@ -71,6 +71,7 @@
     "rss-parser": "^3.12.0",
     "svelte-i18n": "^4.0.1",
     "svelte-motion": "^0.12.2",
+    "svelte-sonner": "^1.0.7",
     "temporal-polyfill": "^0.3.0",
     "wx-svelte-gantt": "^2.2.1"
   },
