--- a/package.json
+++ b/package.json
@@ -27,8 +27,8 @@
     "@schedule-x/theme-default": "^3.4.2",
     "@tailwindcss/typography": "^0.5.16",
     "@tauri-apps/api": "2.9.0",
-    "@tauri-apps/plugin-dialog": "^2.4.0",
-    "@tauri-apps/plugin-notification": "^2.3.1",
+    "@tauri-apps/plugin-dialog": "2.4.0",
+    "@tauri-apps/plugin-notification": "2.3.1",
     "@tauri-apps/plugin-opener": "2.5.0",
     "@tauri-apps/plugin-updater": "~2.9.0",
     "@tiptap/core": "^2.12.0",
