--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -60,6 +60,9 @@ regex = "1.10"
 scraper = "0.20"
 ammonia = "4.0"
 
+# PDF Parsing
+pdf-extract = "0.7"
+
 [target.'cfg(target_os = "macos")'.dependencies]
 cocoa = "0.25"
 objc = "0.2"
