--- a/package.json
+++ b/package.json
@@ -56,6 +56,7 @@
     "dayjs": "^1.11.13",
     "dompurify": "^3.2.5",
     "file-saver": "^2.0.5",
+    "gridstack": "^12.4.2",
     "html5-qrcode": "^2.3.8",
     "ics": "^3.8.1",
     "js-base64": "^3.7.7",
@@ -85,6 +86,7 @@
     "@tanstack/table-core": "^8.21.3",
     "@tauri-apps/cli": "2.9.4",
     "@types/file-saver": "^2.0.7",
+    "@types/gridstack": "^0.5.2",
     "bits-ui": "^2.9.8",
     "clsx": "^2.1.1",
     "layerchart": "2.0.0-next.27",
