--- a/package.json
+++ b/package.json
@@ -70,6 +70,7 @@
     "prosemirror-state": "^1.4.3",
     "prosemirror-view": "^1.33.9",
     "rss-parser": "^3.12.0",
+    "sortablejs": "^1.15.6",
     "svelte-i18n": "^4.0.1",
     "svelte-motion": "^0.12.2",
     "svelte-sonner": "^1.0.7",
@@ -87,6 +88,7 @@
     "@tauri-apps/cli": "2.9.4",
     "@types/file-saver": "^2.0.7",
     "@types/gridstack": "^0.5.2",
+    "@types/sortablejs": "^1.15.9",
     "bits-ui": "^2.9.8",
     "clsx": "^2.1.1",
     "layerchart": "2.0.0-next.27",
